--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <header id+"header">
+        <header id="header">
             <h1>Lacey's Playground</h1>
-            <img src=".assets/Lacey_profile_picture.jpeg" alt="Profile image of Lacey Trokey"/>
+            <img src="./assets/Lacey Profile Picture.png" alt="Profile image of Lacey Trokey" />
         </header>
         
         <main>
