added round 1 of html subject description and some css styling

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./assets/style.css">
         <meta charset="UTF-8">
         <title>Lacey's Playground!</title>
     </head>
 
     <body>
-        <header id="header">
+        <header>
             <h1>Lacey's Playground</h1>
             <img src="./assets/Lacey Profile Picture.png" alt="Profile image of Lacey Trokey" />
         </header>
         
         <main>
-            <section class="card" id="experiments-section-1">
-                <h2>Experiments 1</h2>
+            <section class="card" id="subject1">
+                <h2>Activities</h2>
+                <br>
+                <h3>I enjoy...</h3>
+                <p>Snowboarding</p>
+                <p>Hiking in the mountains</p>
+                <p>Relaxing by the lake</p>
             </section>
 
-            <section class="card" id="experiments-section-1">
+            <section class="card">
                 <h2>Experiments 2</h2>
             </section>            
             
-            <section class="card" id="experiments-section-1">
+            <section class="card">
                 <h2>Experiments 3</h2>
             </section>
         </main>
