added round 2 of html subject description and some css styling

--- a/index.html
+++ b/index.html
@@ -14,26 +14,40 @@
         
         <main>
             <section class="card" id="subject1">
-                <h2>Activities</h2>
+                <h2>Outdoor Activities</h2>
                 <br>
-                <h3>I enjoy...</h3>
+                <h3>I especially enjoy...</h3>
                 <p>Snowboarding</p>
                 <p>Hiking in the mountains</p>
                 <p>Relaxing by the lake</p>
+                <p>Playing pickle ball</p>
             </section>
 
-            <section class="card">
-                <h2>Experiments 2</h2>
+            <section class="card" id="subject2">
+                <h2>Indoor Activities</h2>
+                <br>
+                <h3>My favorite things to do are...</h3>
+                <p>Snuggling with my dogs</p>
+                <p>Watching movies with my family</p>
+                <P>Playing card, board, or dice games</P>
+                <P>Deep conversations with my friends and family</P>
             </section>            
             
-            <section class="card">
-                <h2>Experiments 3</h2>
+            <section class="card" id="subject3">
+                <h2>Other Activities</h2>
+                <br>
+                <h3>Timeless loves of my life...</h3>
+                <p>Resting in His goodness</p>
+                <p>Any activity with Zach and Olive</p>
+                <p>Going for long drives</p>
+                <p>Spending time with my mom and siblings</p>
+                <p></p>
             </section>
         </main>
         <!-- Coming Soon! -->
     </body>
 
     <footer> 
-        <p>I can code...</p>
+        <p>More coming soon...</p>
     </footer>
 </html>
